[tool.poetry]
name = "kafka-topic-replicator"
version = "0.1.0"
description = "An application that replicates records from one Kafka topic to another with a configurable delay"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
kafka-python = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
